add logging and fe integrations
